# airlock-ebpf

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md  REPLAY_ARTIFACTS.md  SAFETY.md  VERIFICATION_INDEX.md  airlock_min.c
.cargo/: config.toml
airlock-clean/: Cargo.toml  build.rs
airlock-clean-common/: Cargo.toml
airlock-clean-ebpf/: Cargo.toml
airlock-clean-ebpf/src/: main.rs  main.rs.phase4-backup  vmlinux.rs
airlock-signer/: Cargo.toml
airlock-signer/src/: bin_policy_gen.rs  bin_pubkey.rs  main.rs
ebpf/: Cargo.toml  nyn
parity/: PARITY_TARGETS.md  PHASE10_CAPTURE_SUBSTRATE.md  PHASE10_IDENTITY_BASELINE.md  PHASE10_LIVE_PARITY_RESULT.md  PHASE10_MINIMAL_PARITY_PLAN.md  PHASE10_ORDERED_REPLAY.md  PHASE10_POLICY_FIXTURE.md  PHASE10_TELEMETRY_CORRELATION.md  PHASE11_CONTROLLED_NONDETERMINISM.md  PHASE12_CONTROLLED_CONCURRENCY.md  PHASE13_BUFFERED_RESULT.md  PHASE13_BUFFERED_TELEMETRY.md  PHASE14_REPLAY_WINDOW_DRIFT.md  PHASE14_WINDOW_RESULT.md  PHASE15_ATTRIBUTION_RESULT.md  PHASE15_ATTRIBUTION_STRESS.md  PHASE16_SATURATION_RESULT.md  PHASE16_SATURATION_THRESHOLD.md  PHASE17_PARTIAL_ATTRIBUTION_AMBIGUITY.md  PHASE17_PARTIAL_RESULT.md  PHASE18_PARTIAL_ORDERING.md  PHASE18_PARTIAL_ORDERING_RESULT.md  final_identity_probe.sh  identity_probe.sh  minimal_parity_fixture.json  run_minimal_parity.sh  run_phase10_capture.sh  run_phase10_ordered_replay.sh  run_phase10_telemetry_capture.sh  run_phase11_replay_loop.sh  run_phase12_concurrent_replay.sh  run_phase13_buffered_observe.sh  run_phase14_window_drift.sh  run_phase15_attribution_stress.sh  (+3 more)
(+50 files in other folders)
