[workspace]
resolver = "2"

members = [
    "airlock-clean",
    "airlock-clean-common",
    "airlock-clean-ebpf",
    "xtask",
]

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
anyhow = "1"

aya = { git = "https://github.com/aya-rs/aya" }
aya-build = { git = "https://github.com/aya-rs/aya" }
aya-ebpf = { git = "https://github.com/aya-rs/aya" }
aya-log = { git = "https://github.com/aya-rs/aya" }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya" }

cargo_metadata = "0.18"
env_logger = "0.11"
libc = "0.2"
log = "0.4"
tokio = "1"
which = "6"
